--- a/client/package.json
+++ b/client/package.json
@@ -16,15 +16,19 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "apexcharts": "^3.41.0",
+    "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
     "headlessui": "^0.0.0",
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.2",
     "jsvectormap": "^1.5.3",
     "match-sorter": "^6.3.1",
+    "path": "^0.12.7",
+    "query-string": "^9.1.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.1.4",
     "react-icons": "^4.10.1",
