--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "url": "https://tailadmin.com"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^2.0.0",
     "@reduxjs/toolkit": "^2.4.0",
+    "@tanstack/react-query": "^5.62.7",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
@@ -32,10 +34,15 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.1.4",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
+    "react-phone-number-input": "^3.4.10",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.14.2",
+    "react-select": "^5.9.0",
     "react-toastify": "^9.1.3",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "viem": "^2.21.55",
+    "wagmi": "^2.14.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
