--- a/client/package.json
+++ b/client/package.json
@@ -36,10 +36,12 @@
     "react-i18next": "^15.1.4",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
+    "react-organizational-chart": "^2.2.1",
     "react-phone-number-input": "^3.4.10",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.9.0",
+    "react-simple-tree-menu": "^1.1.18",
     "react-toastify": "^9.1.3",
     "sort-by": "^0.0.2",
     "viem": "^2.21.55",
