--- a/client/.env
+++ b/client/.env
@@ -4,5 +4,6 @@ VITE_TOKEN_ADDRESS=0x55d398326f99059ff775485246999027b3197955
 VITE_SMART_CONTRACT_ADDRESS=0x49010eF4084CDCbb697a39f29aD4D1706090D4Be
 VITE_MAIN_WALLET_ADDRESS=0x4240ED0D6ef9a25FD36066CE7e8009DB6F4780B8
 VITE_CLOUDINARY_URL=https://api.cloudinary.com/v1_1/dhqggkmto
-VITE_HOST_SEREPAY=https://serepay.net
+VITE_HOST_SEREPAY=https://remitano.dk-tech.vn
+# VITE_HOST_SEREPAY=https://serepay.net
 VITE_SEREPAY_BASE_URL=https://farming-simulator.pstmn.io
