--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,8 @@
     "react-toastify": "^9.1.3",
     "sort-by": "^0.0.2",
     "viem": "^2.21.55",
-    "wagmi": "^2.14.1"
+    "wagmi": "^2.14.1",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
