--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cron": "^2.3.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.1.4",
+    "ethers": "^6.13.4",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "gravatar": "^1.8.2",
