--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "apexcharts": "^3.41.0",
     "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
+    "fslightbox-react": "^1.7.6",
     "headlessui": "^0.0.0",
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.2",
@@ -27,6 +28,7 @@
     "query-string": "^9.1.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
@@ -39,6 +41,7 @@
     "react-router-dom": "^6.14.2",
     "react-select": "^5.9.0",
     "react-simple-tree-menu": "^1.1.18",
+    "react-switch": "^7.1.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^0.0.2",
     "viem": "^2.21.55",
