--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "@tanstack/react-query": "^5.62.7",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "flatpickr": "^4.6.13",
     "fslightbox-react": "^1.7.6",
     "headlessui": "^0.0.0",
@@ -28,6 +30,7 @@
     "query-string": "^9.1.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.3.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
