--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.62.7",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.9",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
     "flatpickr": "^4.6.13",
@@ -25,6 +26,7 @@
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.2",
     "jsvectormap": "^1.5.3",
+    "lucide-react": "^0.486.0",
     "match-sorter": "^6.3.1",
     "path": "^0.12.7",
     "query-string": "^9.1.1",
