--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "file-saver": "^2.0.5",
     "flatpickr": "^4.6.13",
     "fslightbox-react": "^1.7.6",
     "headlessui": "^0.0.0",
@@ -28,12 +29,14 @@
     "jsvectormap": "^1.5.3",
     "lucide-react": "^0.486.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.30.1",
     "path": "^0.12.7",
     "query-string": "^9.1.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.3.0",
     "react-confirm-alert": "^3.0.6",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
@@ -53,7 +56,8 @@
     "suneditor-react": "^3.6.1",
     "viem": "^2.21.55",
     "wagmi": "^2.14.1",
-    "web3": "^4.16.0"
+    "web3": "^4.16.0",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
