--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@metamask/detect-provider": "^2.0.0",
     "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.62.7",
+    "@walletconnect/ethereum-provider": "^2.20.2",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.9",
     "canvas-confetti": "^1.9.3",
@@ -54,8 +55,8 @@
     "sort-by": "^0.0.2",
     "suneditor": "^2.47.5",
     "suneditor-react": "^3.6.1",
-    "viem": "^2.21.55",
-    "wagmi": "^2.14.1",
+    "viem": "^2.28.4",
+    "wagmi": "^2.15.2",
     "web3": "^4.16.0",
     "xlsx-js-style": "^1.2.0"
   },
