--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "express-async-handler": "^1.2.0",
     "gravatar": "^1.8.2",
     "helmet": "^7.0.0",
+    "https": "^1.0.0",
     "i18n": "^0.15.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
