--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.2",
     "jsvectormap": "^1.5.3",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.486.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.30.1",
