--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
     "sort-by": "^0.0.2",
     "suneditor": "^2.47.5",
     "suneditor-react": "^3.6.1",
+    "uuid": "^11.1.0",
     "viem": "^2.31.7",
     "wagmi": "^2.15.6",
     "web3": "^4.16.0",
