--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,23 @@
   },
   "dependencies": {
     "@metamask/detect-provider": "^2.0.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-table": "^8.21.3",
     "@walletconnect/ethereum-provider": "^2.20.2",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.9",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "flatpickr": "^4.6.13",
     "fslightbox-react": "^1.7.6",
@@ -40,6 +49,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.2.0",
+    "react-flag-kit": "^1.1.1",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.1.4",
@@ -56,6 +66,7 @@
     "sort-by": "^0.0.2",
     "suneditor": "^2.47.5",
     "suneditor-react": "^3.6.1",
+    "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
     "viem": "^2.31.7",
     "wagmi": "^2.15.6",
