--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@metamask/detect-provider": "^2.0.0",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
@@ -30,6 +31,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "flatpickr": "^4.6.13",
     "fslightbox-react": "^1.7.6",
@@ -48,6 +50,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^8.3.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^18.2.0",
     "react-flag-kit": "^1.1.1",
     "react-hook-form": "^7.54.1",
