--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "i18n": "^0.15.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.*",
