--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "import:data": "node seeder.js"
+    "import:data": "node seeder.js",
+    "create-root-admin": "node scripts/createRootAdmin.js",
+    "create-admin-permissions": "node scripts/createAdminPermissions.js"
   },
   "dependencies": {
     "axios": "^1.12.2",
@@ -32,7 +34,9 @@
     "multer": "^1.4.*",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
