--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "create-admin-permissions": "node scripts/createAdminPermissions.js"
   },
   "dependencies": {
+    "archiver": "^7.0.1",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.2",
@@ -19,6 +20,8 @@
     "cors": "^2.8.5",
     "cron": "^2.3.1",
     "crypto": "^1.0.1",
+    "docxtemplater": "^3.67.6",
+    "docxtemplater-image-module-free": "^1.1.1",
     "dotenv": "^16.1.4",
     "ethers": "^6.13.4",
     "express": "^4.18.2",
@@ -35,6 +38,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.3",
     "path": "^0.12.7",
+    "pizzip": "^3.2.0",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0"
   },
