--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "helmet": "^7.0.0",
     "i18n": "^0.15.1",
     "jsonwebtoken": "^9.0.0",
+    "mammoth": "^1.11.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.6.0",
     "mongoose": "^7.2.2",
